# financial-analytics-dashboard

./: .gitignore  README.md  RELEASES.md
.github/workflows/: ci.yml  release.yml
backend/analytics-engine/: Cargo.toml  Dockerfile
backend/analytics-engine/src/: analytics.rs  indicators.rs  lib.rs  main.rs  streaming.rs
backend/api-gateway/: Dockerfile  go.mod  go.sum
backend/api-gateway/cmd/: main.go
backend/ml-services/: app.py  requirements.txt
backend/services/auth-service/: Dockerfile  go.mod  go.sum  main.go
backend/services/dashboard-service/: Dockerfile  go.mod  go.sum  main.go
backend/services/notification-service/: Dockerfile  go.mod  go.sum  main.go
backend/services/user-service/: Dockerfile  go.mod  go.sum  main.go
database/migrations/: 001_initial_schema.sql
frontend/: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml
frontend/.dart_tool/: package_config.json  package_config_subset
frontend/android/: local.properties
frontend/android/app/: build.gradle
frontend/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
frontend/ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
frontend/lib/: main.dart
frontend/lib/services/: auth_service.dart  platform_service.dart  websocket_service.dart
frontend/macos/Flutter/: GeneratedPluginRegistrant.swift
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
infrastructure/: docker-compose.yml
infrastructure/kubernetes/base/: api-gateway-deployment.yaml  configmap.yaml  (+2 more)
infrastructure/terraform/: main.tf  variables.tf
scripts/: build-all.sh  setup.sh  start-dev.sh
(+38 files in other folders)
