[package]
name = "analytics-engine"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
wasm-bindgen = "0.2"
web-sys = "0.3"
rayon = "1.7"
ndarray = "0.15"
ta = "0.5"
chrono = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.32", features = ["full"] }
axum = "0.6"
rdkafka = { version = "0.34", features = ["tokio"] }
redis = { version = "0.23", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
tracing-subscriber = "0.3"
prometheus = "0.13"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true

[[bin]]
name = "analytics-service"
path = "src/main.rs"